[gd_scene load_steps=7 format=2]

[ext_resource path="res://Character/Emotes/emote_drop.png" type="Texture" id=1]
[ext_resource path="res://Character/Emotes/thought_emote.png" type="Texture" id=2]
[ext_resource path="res://Character/Dream.gd" type="Script" id=3]
[ext_resource path="res://Utility/InteractableObject.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.8847, 21.1446 )

[sub_resource type="Animation" id=2]
resource_name = "Pop"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[node name="Dream" type="Sprite"]
self_modulate = Color( 0.447059, 0.552941, 0.960784, 1 )
position = Vector2( 475.169, 286.315 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="ThoughtSprite" type="Sprite" parent="."]
modulate = Color( 0.270588, 0.258824, 0.639216, 1 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="InteractableObject" parent="." instance=ExtResource( 4 )]

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Pop = SubResource( 2 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
